# leko-mattermost-bot

./: .gitignore  AGENTS.md  Cargo.toml  DEV.md  Dockerfile  LICENSE  README.md  build.sh  create_icon.sh  docker-compose.yml  manifest.json
.github/workflows/: ci.yml
.sqlx/: query-123dd1701a2adf93247557ca9e97b84043b366d1e4cfa41a2a0dbf547a3e7868.json  query-17bcea91fab8a1dee77b512f3de3317cedb735eccbda74ccaf43f035f83cd640.json  query-2d7ed97f804d5ef4dc71de3227bf2e4f5c3f5b87ba9d3c29b363380f40424bd6.json  query-2f14ae1317acd07d34c80d8b649e4a2ab86fb04e89c439d9881acf103a882f35.json  query-4d4a1800ce1226034dcd60c650d86533d31e706078b2a926db243957639912e5.json  query-53efca410807f1bbc96ffd5c005864b8ca5a73a4476bf5a5cfc954a2db4573fb.json  query-5d9a732d2624c1c128ac56f840d5c26cbed7d89cd67dcc86bd8fa029b6cdfc28.json  query-847db3ba5f939ca6edca035d82bff5562f5e9688e36d49a6e8a16cd0acf95635.json  query-84b8269ca531b107e0da80ea869475a290e31d304bec052a1085300e731abbac.json  query-85ebfd26a5bc4ba08f938a2ce8861b3968af3db36639391e3143e054d5a03b2a.json  query-9dd3cdf307d9262211f4bbb27a40b78bb7f855ba1167dfd0f4270499b7849ee0.json  query-a432d757bf2a8b8262b9b7e9f12aa0df9073c11bcbab73f9d34f14bfecc0a859.json  query-a4cc13e00c2c59baee1be4271113d955261f3bb1ca66a0aa4f2084e56e735a51.json  query-ad7803426f9a06c242a746e986051d231e0e046da003bda0d712d8af0b3d8359.json  query-afc1a619c7df0fd41790dbf31fe3c4211fdd4fa5a6ce94390e86622397d07741.json  query-b487df5ba6ede4bfea92086c07c81374679db60be5ab2cff32d2c33ded9094a4.json  query-b54a5e7ce2cf0eddedfe521ed9c10a80de9dd0da666c06e1bbc5b489da55b783.json  query-b7e69cd10fceabbeb3cbc6c7d113c5f04942d01d5ecb91791bd3348d9587247a.json  query-d3233dbc84c22906c80b7358ff809de707d4f7ccaab9a869a8398a8000b38987.json  query-d9706d7327ab16c432bd8b94e9a5bd4fb6aa630e529199a123c3d214d8b76b07.json
scripts/: sqlx_prepare.rs
src/: app.rs  config.rs  database.rs  handlers.rs  main.rs  mattermost.rs  schema.sql  sticker.rs  test_utils.rs  websocket.rs
src/handlers/: actions.rs  auth.rs  dm.rs  group_buy.rs  leko.rs  mod.rs  sticker.rs
src/handlers/group_buy/: actions.rs  dialogs.rs  messages.rs  utils.rs
